[package]
name = "openwv"
version = "0.1.0"
license = "LGPL-3.0-only"

description = "Open reimplementation of Google's libwidevinecdm.so Content Decryption Module"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]

edition = "2021"

[dependencies]
autocxx = "0.27"
cxx = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
autocxx-build = "0.27"
miette = { version = "5", features = ["fancy"] }

[lib]
name = "widevinecdm"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
