[package]
name = "openwv"
version = "0.1.0"
license = "LGPL-3.0-only"

description = "Open reimplementation of Google's libwidevinecdm.so Content Decryption Module"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]

edition = "2021"

[dependencies]
autocxx = "0.27"
cxx = "1"
prost = "0.13"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
byteorder = "1"
rand = "0.9"
uuid = "1"
ring = { version = "0.17", features = ["std"] }

[build-dependencies]
autocxx-build = { git = "https://github.com/google/autocxx.git" }
prost-build = "0.13"
thiserror = "2"

[lib]
name = "widevinecdm"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
