[package]
name = "openwv"
version = "0.1.0"
license = "LGPL-3.0-only"

description = "Open reimplementation of Google's libwidevinecdm.so Content Decryption Module"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]

edition = "2024"

[dependencies]
autocxx = { git = "https://github.com/tchebb/autocxx.git", branch = "openwv-fixes" }
cxx = "1"
prost = "0.13"
thiserror = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
byteorder = "1"
rand = "0.9"
uuid = "1"

### RustCrypto crates
# FIXME: Get rid of this once RustCrypto migrates to rand 0.9
rand8 = { package = "rand", version = "0.8" }
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
cmac = "0.7"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
ctr = { version = "0.9", features = ["std"] }

[build-dependencies]
autocxx-build = { git = "https://github.com/tchebb/autocxx.git", branch = "openwv-fixes" }
prost-build = "0.13"
thiserror = "2"

[lib]
name = "widevinecdm"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
